--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -71,7 +71,6 @@
         "!pip install einops\n",
         "!pip install fuzzywuzzy[speedup]\n",
         "!pip install torch-summary\n",
-        "!pip install sklearn\n",
         "!pip install tqdm\n",
         "!pip install matplotlib\n",
         "!apt install fluidsynth #Pip does not work for some reason. Only apt works\n",
@@ -103,14 +102,6 @@
         "print('=' * 70)\n",
         "print('Loading main Los Angeles Music Composer modules...')\n",
         "import torch\n",
-        "\n",
-        "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
-        "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
-        "device_type = 'cuda'\n",
-        "dtype = 'bfloat16' if torch.cuda.is_available() and torch.cuda.is_bf16_supported() else 'float16' # 'float32', 'bfloat16', or 'float16', the latter will auto implement a GradScaler\n",
-        "\n",
-        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
-        "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "%cd /content/Los-Angeles-Music-Composer\n",
         "\n",
@@ -189,11 +180,15 @@
         "\n",
         "#@markdown Model precision option\n",
         "\n",
-        "model_precision = \"float16\" # @param [\"float16\", \"float32\"]\n",
+        "model_precision = \"bfloat16\" # @param [\"bfloat16\", \"float16\", \"float32\"]\n",
+        "\n",
+        "#@markdown bfloat16 == Third precision/triple speed (if supported, otherwise the model will default to float16)\n",
         "\n",
         "#@markdown float16 == Half precision/double speed\n",
         "\n",
         "#@markdown float32 == Full precision/normal speed\n",
+        "\n",
+        "plot_tokens_embeddings = False # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
         "print('Loading Los Angeles Music Composer Pre-Trained Model...')\n",
@@ -204,7 +199,19 @@
         "torch.backends.cuda.matmul.allow_tf32 = True # allow tf32 on matmul\n",
         "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
         "device_type = 'cuda'\n",
-        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[model_precision]\n",
+        "\n",
+        "if model_precision == 'bloat16' and torch.cuda.is_bf16_supported():\n",
+        "  dtype = 'bloat16'\n",
+        "else:\n",
+        "  dtype = 'float16'\n",
+        "\n",
+        "if model_precision == 'float16':\n",
+        "  dtype = 'float16'\n",
+        "\n",
+        "if model_precision == 'float32':\n",
+        "  dtype = 'float32'\n",
+        "\n",
+        "ptdtype = {'float32': torch.float32, 'bfloat16': torch.bfloat16, 'float16': torch.float16}[dtype]\n",
         "ctx = torch.amp.autocast(device_type=device_type, dtype=ptdtype)\n",
         "\n",
         "SEQ_LEN = 4096\n",
@@ -235,25 +242,30 @@
         "print('Done!')\n",
         "print('=' * 70)\n",
         "\n",
+        "print('Model will use', dtype, 'precision...')\n",
+        "print('=' * 70)\n",
+        "\n",
         "# Model stats\n",
         "print('Model summary...')\n",
         "summary(model)\n",
         "\n",
         "# Plot Token Embeddings\n",
-        "tok_emb = model.module.token_emb.weight.detach().cpu().tolist()\n",
         "\n",
-        "cos_sim = metrics.pairwise_distances(\n",
-        "   tok_emb, metric='cosine'\n",
-        ")\n",
-        "plt.figure(figsize=(7, 7))\n",
-        "plt.imshow(cos_sim, cmap=\"inferno\", interpolation=\"nearest\")\n",
-        "im_ratio = cos_sim.shape[0] / cos_sim.shape[1]\n",
-        "plt.colorbar(fraction=0.046 * im_ratio, pad=0.04)\n",
-        "plt.xlabel(\"Position\")\n",
-        "plt.ylabel(\"Position\")\n",
-        "plt.tight_layout()\n",
-        "plt.plot()\n",
-        "plt.savefig(\"/content/Los-Angeles-Music-Composer-Tokens-Embeddings-Plot.png\", bbox_inches=\"tight\")"
+        "if plot_tokens_embeddings:\n",
+        "  tok_emb = model.module.token_emb.weight.detach().cpu().tolist()\n",
+        "\n",
+        "  cos_sim = metrics.pairwise_distances(\n",
+        "    tok_emb, metric='cosine'\n",
+        "  )\n",
+        "  plt.figure(figsize=(7, 7))\n",
+        "  plt.imshow(cos_sim, cmap=\"inferno\", interpolation=\"nearest\")\n",
+        "  im_ratio = cos_sim.shape[0] / cos_sim.shape[1]\n",
+        "  plt.colorbar(fraction=0.046 * im_ratio, pad=0.04)\n",
+        "  plt.xlabel(\"Position\")\n",
+        "  plt.ylabel(\"Position\")\n",
+        "  plt.tight_layout()\n",
+        "  plt.plot()\n",
+        "  plt.savefig(\"/content/Los-Angeles-Music-Composer-Tokens-Embeddings-Plot.png\", bbox_inches=\"tight\")"
       ]
     },
     {
