--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer Edition (ver. 3.0)\n",
+        "# Los Angeles Music Composer Edition (ver. 4.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -293,14 +293,14 @@
         "if select_seed_MIDI != \"Upload your own custom MIDI\":\n",
         "  print('Loading seed MIDI...')\n",
         "  f = '/content/Los-Angeles-Music-Composer/Seeds/'+select_seed_MIDI+'.mid'\n",
-        "  score = TMIDIX.midi2ms_score(open(f, 'rb').read())\n",
+        "  score = TMIDIX.midi2single_track_ms_score(open(f, 'rb').read(), recalculate_channels=False)\n",
         "\n",
         "else:\n",
         "  print('Upload your own custom MIDI...')\n",
         "  print('=' * 70)\n",
         "  uploaded_MIDI = files.upload()\n",
         "  if list(uploaded_MIDI.keys()):\n",
-        "    score = TMIDIX.midi2ms_score(list(uploaded_MIDI.values())[0])\n",
+        "    score = TMIDIX.midi2single_track_ms_score(list(uploaded_MIDI.values())[0], recalculate_channels=False)\n",
         "    f = list(uploaded_MIDI.keys())[0]\n",
         "\n",
         "if f != '':\n",
@@ -391,7 +391,7 @@
         "    pe = events_matrix1[0]\n",
         "\n",
         "    for e in events_matrix1:\n",
-        "      if e[1] >= 0 and e[2] > 0:\n",
+        "      if e[1] >= 0 and e[2] >= 0:\n",
         "\n",
         "        # Cliping all values...\n",
         "        tim = max(0, min(127, e[1]-pe[1]))\n",
@@ -489,12 +489,12 @@
         "\n",
         "    song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "  detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Los Angeles Music Composer',\n",
-        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "  detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                            output_signature = 'Los Angeles Music Composer',\n",
+        "                                                            output_file_name = '/content/Los-Angeles-Music-Composer-Seed-Composition',\n",
+        "                                                            track_name='Project Los Angeles',\n",
+        "                                                            list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0]\n",
+        "                                                            )\n",
         "\n",
         "  #=======================================================\n",
         "\n",
@@ -647,13 +647,13 @@
         "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',\n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
-        "                                                          track_name='Project Los Angeles',\n",
-        "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                          number_of_ticks_per_quarter=500)\n",
-        "      print('=' * 70)\n",
+        "      detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                            output_signature = 'Los Angeles Music Composer',\n",
+        "                                                            output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
+        "                                                            track_name='Project Los Angeles',\n",
+        "                                                            list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0]\n",
+        "                                                            )\n",
+        "        print('=' * 70)\n",
         "      print('Displaying resulting composition...')\n",
         "      print('=' * 70)\n",
         "\n",
@@ -752,12 +752,12 @@
         "\n",
         "      song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "    detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                        output_signature = 'Los Angeles Music Composer',\n",
-        "                                                        output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition',\n",
-        "                                                        track_name='Project Los Angeles',\n",
-        "                                                        list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                        number_of_ticks_per_quarter=500)\n",
+        "    detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                              output_signature = 'Los Angeles Music Composer',\n",
+        "                                                              output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition',\n",
+        "                                                              track_name='Project Los Angeles',\n",
+        "                                                              list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0]\n",
+        "                                                              )\n",
         "    print('=' * 70)\n",
         "    print('Displaying resulting composition...')\n",
         "    print('=' * 70)\n",
