--- a/Los_Angeles_Music_Composer_TTM_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_TTM_Edition.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Los Angeles Music Composer TTM Edition (ver. 3.0)\n",
+        "# Los Angeles Music Composer TTM Edition (ver. 4.0)\n",
         "\n",
         "***\n",
         "\n",
@@ -457,12 +457,12 @@
         "\n",
         "        song_f.append(['note', tim, dur, channel, pitch, vel ])\n",
         "\n",
-        "      detailed_stats = TMIDIX.Tegridy_SONG_to_MIDI_Converter(song_f,\n",
-        "                                                          output_signature = 'Los Angeles Music Composer',\n",
-        "                                                          output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
-        "                                                          track_name='Project Los Angeles',\n",
-        "                                                          list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0],\n",
-        "                                                          number_of_ticks_per_quarter=500)\n",
+        "      detailed_stats = TMIDIX.Tegridy_ms_SONG_to_MIDI_Converter(song_f,\n",
+        "                                                                output_signature = 'Los Angeles Music Composer',\n",
+        "                                                                output_file_name = '/content/Los-Angeles-Music-Composer-Music-Composition_'+str(i),\n",
+        "                                                                track_name='Project Los Angeles',\n",
+        "                                                                list_of_MIDI_patches=[0, 24, 32, 40, 42, 46, 56, 71, 73, 0, 53, 19, 0, 0, 0, 0]\n",
+        "                                                                )\n",
         "      print('=' * 70)\n",
         "      print('Displaying resulting composition...')\n",
         "      print('=' * 70)\n",
