--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -467,6 +467,9 @@
       "outputs": [],
       "source": [
         "#@title Load Seed MIDI\n",
+        "\n",
+        "#@markdown Press play button to to upload your own seed MIDI or to load one of the provided sample seed MIDIs from the dropdown list below\n",
+        "\n",
         "select_seed_MIDI = \"Upload your own custom MIDI\" #@param [\"Upload your own custom MIDI\", \"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
         "render_MIDI_to_audio = False # @param {type:\"boolean\"}\n",
         "\n",
@@ -880,11 +883,13 @@
       "source": [
         "#@title Pitches/Instruments Inpainting\n",
         "\n",
-        "#@markdown NOTE: You can stop the inpainting at any time to render partial results\n",
-        "\n",
         "#@markdown Inpainting settings\n",
         "\n",
-        "#@markdown Select desired instruments to inpaint (any combination is fine)\n",
+        "#@markdown Select desired instruments to inpaint.\n",
+        "\n",
+        "#@markdown Selected instruments MUST BE present in the composition for inpainting to work\n",
+        "\n",
+        "#@markdown You can stop the inpainting at any time to render partial results\n",
         "\n",
         "Piano = False #@param {type:\"boolean\"}\n",
         "Guitar = False #@param {type:\"boolean\"}\n",
@@ -895,7 +900,6 @@
         "Trumpet = False #@param {type:\"boolean\"}\n",
         "Clarinet = False #@param {type:\"boolean\"}\n",
         "Flute = False #@param {type:\"boolean\"}\n",
-        "Drums = False #@param {type:\"boolean\"}\n",
         "Choir = False #@param {type:\"boolean\"}\n",
         "Organ = False #@param {type:\"boolean\"}\n",
         "\n",
@@ -903,8 +907,10 @@
         "\n",
         "number_of_prime_notes = 64 #@param {type:\"slider\", min:1, max:512, step:1}\n",
         "number_of_memory_tokens = 4095 # @param {type:\"slider\", min:6, max:4095, step:3}\n",
-        "number_of_samples_per_inpainted_note = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "number_of_samples_per_inpainted_note = 1 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "temperature = 1 #@param {type:\"slider\", min:0.1, max:1, step:0.1}\n",
+        "\n",
+        "#@markdown Other settings\n",
         "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "\n",
@@ -959,7 +965,7 @@
         "\n",
         "  try:\n",
         "\n",
-        "    if (melody_chords_f1[i][2]-1152) // 128 in inpaint_instrument:\n",
+        "    if ((melody_chords_f1[i][2]-1152) // 128) in inpaint_instrument:\n",
         "\n",
         "      out2.extend(melody_chords_f1[i][:2])\n",
         "\n",
