--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -280,8 +280,11 @@
       "cell_type": "code",
       "source": [
         "#@title Load Seed MIDI\n",
+        "\n",
+        "#@markdown Press play button to to upload your own seed MIDI or to load one of the provided sample seed MIDIs from the dropdown list below\n",
+        "\n",
         "select_seed_MIDI = \"Upload your own custom MIDI\" #@param [\"Upload your own custom MIDI\", \"Los-Angeles-Music-Composer-Piano-Seed-1\", \"Los-Angeles-Music-Composer-Piano-Seed-2\", \"Los-Angeles-Music-Composer-Piano-Seed-3\", \"Los-Angeles-Music-Composer-Piano-Seed-4\", \"Los-Angeles-Music-Composer-Piano-Seed-5\", \"Los-Angeles-Music-Composer-MI-Seed-1\", \"Los-Angeles-Music-Composer-MI-Seed-2\", \"Los-Angeles-Music-Composer-MI-Seed-3\", \"Los-Angeles-Music-Composer-MI-Seed-4\", \"Los-Angeles-Music-Composer-MI-Seed-5\"]\n",
-        "number_of_prime_tokens = 402 #@param {type:\"slider\", min:126, max:3000, step:3}\n",
+        "number_of_prime_tokens = 300 #@param {type:\"slider\", min:126, max:3000, step:3}\n",
         "render_MIDI_to_audio = False # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
@@ -563,7 +566,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title Standard/Simple Continuation\n",
+        "#@title Standard  Continuation Generator\n",
         "number_of_tokens_to_generate = 120 # @param {type:\"slider\", min:33, max:1023, step:3}\n",
         "number_of_batches_to_generate = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "preview_length_in_tokens = 120 # @param {type:\"slider\", min:33, max:240, step:3}\n",
@@ -572,7 +575,7 @@
         "render_MIDI_to_audio = True # @param {type:\"boolean\"}\n",
         "\n",
         "print('=' * 70)\n",
-        "print('Los Angeles Music Composer Standard Model Generator')\n",
+        "print('Los Angeles Music Composer Standard Continuation Model Generator')\n",
         "print('=' * 70)\n",
         "\n",
         "preview = melody_chords_f[-preview_length_in_tokens:]\n",
