--- a/Los_Angeles_Music_Composer_Edition.ipynb
+++ b/Los_Angeles_Music_Composer_Edition.ipynb
@@ -518,6 +518,9 @@
         "\n",
         "  colors = ['red', 'yellow', 'green', 'cyan', 'blue', 'pink', 'orange', 'purple', 'gray', 'white', 'gold', 'silver']\n",
         "\n",
+        "  block_lines = [(song_f[-1][1] / 1000)]\n",
+        "  block_tokens = [min(len(melody_chords_f), number_of_prime_tokens)]\n",
+        "\n",
         "  for s in song_f:\n",
         "    x.append(s[1] / 1000)\n",
         "    y.append(s[4])\n",
@@ -701,8 +704,8 @@
         "  melody_chords_f.extend(out0[min(len(out0)-1, add_block_with_batch_number)])\n",
         "  print('Block added!')\n",
         "else:\n",
-        "  if len(melody_chords_f) > number_of_prime_tokens:\n",
-        "    melody_chords_f = melody_chords_f[:max(number_of_prime_tokens, (len(melody_chords_f)-block_tokens[-1]))]\n",
+        "  if len(block_tokens) > 1:\n",
+        "    melody_chords_f = melody_chords_f[:(len(melody_chords_f)-block_tokens[-1])]\n",
         "    print('Block removed!')\n",
         "  else:\n",
         "    print('Nothing to remove!!!')\n",
@@ -772,7 +775,7 @@
         "      block_lines.append((song_f[-1][1] / 1000))\n",
         "      block_tokens.append(len(out0[min(len(out0)-1, add_block_with_batch_number)]))\n",
         "    else:\n",
-        "      if len(block_lines) > 1:\n",
+        "      if len(block_tokens) > 1:\n",
         "        block_lines.pop()\n",
         "        block_tokens.pop()\n",
         "\n",
