--- a/Los_Angeles_Music_Composer.ipynb
+++ b/Los_Angeles_Music_Composer.ipynb
@@ -198,8 +198,8 @@
         "torch.backends.cudnn.allow_tf32 = True # allow tf32 on cudnn\n",
         "device_type = 'cuda'\n",
         "\n",
-        "if model_precision == 'bloat16' and torch.cuda.is_bf16_supported():\n",
-        "  dtype = 'bloat16'\n",
+        "if model_precision == 'bfloat16' and torch.cuda.is_bf16_supported():\n",
+        "  dtype = 'bfloat16'\n",
         "else:\n",
         "  dtype = 'float16'\n",
         "\n",
